@startuml Diagrama De CLASES

skinparam classAttributeIconSize 0
skinparam classFontStyle bold

' ======================
' CLASES DEL MODELO
' ======================

class java.Tablero
class Hexagono
class Arista
class Vertice
class java.Terreno

java.Tablero --> Hexagono
java.Tablero --> Arista
java.Tablero --> Vertice

Hexagono --> Vertice
Hexagono --> java.Terreno

Arista --> Vertice

@enduml